--- a/base_code/webpy/templates/index.html
+++ b/base_code/webpy/templates/index.html
@@ -1,6 +1,6 @@
-$def with (name)
+$def with (todos)
 
-$if name:
-    I just wanted to  say <em>hello</em> to $name.
-$else:
-    <em>Hello</em>,world!
+<ul>
+$for todo in todos:
+    <li id = "t$todo.id">$todo.title</li>
+</ul>
