优化sql查询方式

--- a/base_code/webpy/templates/index.html
+++ b/base_code/webpy/templates/index.html
@@ -1,4 +1,6 @@
 $def with (todos)
+<!-- 禁止收藏图标请求 -->
+<link rel="icon" href="data:image/ico;base64,aWNv">
 
 <ul>
 $for todo in todos:
@@ -8,6 +10,3 @@ $for todo in todos:
 <form method="post" action="add">
 <p><input type="text" name="title" /> <input type="submit" value="Add" /></p>
 </form>
-
-<!--设置“/Favigix.ICO”作为非安全资源 -->
-<intercept-url pattern="/favicon.ico" access="ROLE_ANONYMOUS" />
