--- a/base_code/webpy/templates/index.html
+++ b/base_code/webpy/templates/index.html
@@ -1,24 +1,22 @@
-$def with (todos,form)
+$def with (form)
 <!-- 禁止收藏图标请求 -->
 <link rel="icon" href="data:image/ico;base64,aWNv">
 
-<table border="0">
-$for todo in todos:
-    <tr id = "t$todo.sale_id">
-        <td>$todo.sale_id</td>
-        <td>$todo.performance_name</td>
-        <td>$todo.totalprice</td>
-        <td>$todo.dt</td>
-        <td>$todo.bd_name</td>
-    </tr>
-</table>
-
-<!--
-<form method="post" action="add">
-<p><input type="text" name="title" /> <input type="submit" value="Add" /></p>
-</form>
--->
 <form name="main" method="post">
 $if not form.valid: <p class="error">Try agin, AmeriCAN:</p>
 $:form.render()
 <input type="submit" />     </form>
+
+<!--
+<table border="0">
+def with (todos,form)
+for todo in todos:
+    <tr id = "ttodo.sale_id">
+        <td>todo.sale_id</td>
+        <td>todo.performance_name</td>
+        <td>todo.totalprice</td>
+        <td>todo.dt</td>
+        <td>todo.bd_name</td>
+    </tr>
+</table>
+-->
