--- a/base_code/webpy/templates/formtest.html
+++ b/base_code/webpy/templates/formtest.html
@@ -1,6 +1,9 @@
 $def with (form)
+<head>
+    <meta charset="UTF-8">
 <!-- 禁止收藏图标请求 -->
-<link rel="icon" href="data:image/ico;base64,aWNv">
+    <link rel="icon" href="data:image/ico;base64,aWNv">
+</head> 
 
 <form name="main" method="post">
 $if not form.valid: <p class="error">Try agin, AmeriCAN:</p>
