学习html基础之表单

--- a/learnsklearn/movieclassifier/templates/reviewform.html
+++ b/learnsklearn/movieclassifier/templates/reviewform.html
@@ -8,7 +8,7 @@
 
     {% from "_formhelpers.html" import render_field %}
 
-    <form method=post action="/results">
+    <form method="post" action="/results">
     <dl>
         {{ render_field(form.moviereview,cols='30',rows='10') }}
     </dl>
