--- a/learnsklearn/movieclassifier/templates/results.html
+++ b/learnsklearn/movieclassifier/templates/results.html
@@ -11,7 +11,7 @@
 <div>This movie review is <strong>{{ prediction }}</strong>
     (probability: {{ probability }}%).</div>
 <div id='button'>
-    <form action="/thanks" method=post>
+    <form action="/thanks" method="post">
         <input type=submit value='Correct' name='feedback_button'>
         <input type=submit value='Incorrect' name='feedback_button'>
         <input type=hidden value='{{ prediction }}' name='prediction'>
